feat community info page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,9 @@
 {
     "home" : {
         "welcome" : "Welcome to Your Vue.js App"
+    },
+    "communnity" : {
+        "title": "About",
+        "subtitle": "we love create amazing events!"
     }
 }
