Adding Emit for the workshop clicked
- Also removed the section as it will work with SectionHero.vue later

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,5 +9,9 @@
     },
     "home" : {
         "welcome" : "Welcome to Your Vue.js App"
+    },
+    "workshop": {
+      "photo": "Presenter picture",
+      "more": "More information"
     }
 }
