--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -10,5 +10,9 @@
     },
     "home" : {
         "welcome" : "Bienvenido a tu aplicación Vue.js"
+    },
+    "workshop": {
+        "photo": "Foto del instructor",
+        "more": "Mas información"
     }
 }
