working in responsive with laptop, pixel and Iphone

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,5 +13,8 @@
     "workshop": {
       "photo": "Presenter picture",
       "more": "More information"
-    }
+    },
+    "banner":{
+      "subtitle": "The most important JAVA event in Mexico"
+  }
 }
