Fixing styling with SCSS

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,20 +1,21 @@
-{   "header":{
-        "speakers":"Speakers",
-        "schedule": "Schedule",
-        "venue": "Venue",
-        "sponsors": "Sponsors",
-        "login": "Login",
-        "language": "Language",
-        "tickets": "Tickets"
-    },
-    "home" : {
-        "welcome" : "Welcome to Your Vue.js App"
-    },
-    "workshop": {
-      "photo": "Presenter picture",
-      "more": "More information"
-    },
-    "banner":{
-      "subtitle": "The most important JAVA event in Mexico"
+{
+  "header": {
+    "speakers": "Speakers",
+    "schedule": "Schedule",
+    "venue": "Venue",
+    "sponsors": "Sponsors",
+    "login": "Login",
+    "language": "Language",
+    "tickets": "Tickets"
+  },
+  "home": {
+    "welcome": "Welcome to Your Vue.js App"
+  },
+  "workshop": {
+    "photo": "Presenter picture",
+    "more": "More information"
+  },
+  "banner": {
+    "subtitle": "The most important JAVA event in Mexico"
   }
 }
