--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,18 +1,19 @@
 {
-    "header":{
-        "speakers":"Presentadores",
-        "schedule": "Agenda",
-        "venue": "Sede",
-        "sponsors": "Patrocinadores",
-        "login": "Login",
-        "language": "Idioma",
-        "tickets": "Boletos"
-    },
-    "home" : {
-        "welcome" : "Bienvenido a tu aplicación Vue.js"
-    },
-    "workshop": {
-        "photo": "Foto del instructor",
-        "more": "Mas información"
-    }
+  "header": {
+    "speakers": "Presentadores",
+    "schedule": "Agenda",
+    "venue": "Sede",
+    "sponsors": "Patrocinadores",
+    "login": "Login",
+    "language": "Idioma",
+    "tickets": "Boletos",
+    "communities": "Comunidades"
+  },
+  "home": {
+    "welcome": "Bienvenido a tu aplicación Vue.js"
+  },
+  "workshop": {
+    "photo": "Foto del instructor",
+    "more": "Mas información"
+  }
 }
