--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,10 +10,31 @@
     "communities": "Communities"
   },
   "home": {
-    "welcome": "Welcome to Your Vue.js App"
-  },
-  "workshop": {
-    "photo": "Presenter picture",
-    "more": "More information"
+    "welcome": "Welcome to Your Vue.js App",
+    "speakers": {
+      "title": "Speakers",
+      "subtitle": "Meet the industry professionals who are accompanying us",
+      "topButton": "Participate as speaker",
+      "bottomButton": "See all speakers"
+    },
+    "workshops": {
+      "title": "Workshops",
+      "subtitle": "Each workshop has an additional cost apart from the conference",
+      "bottomButton": "See all workshops"
+    },
+    "tickets": {
+      "title": "Tickets",
+      "subtitle": "Get yours while they are still available"
+    },
+    "sponsors": {
+      "title": "Sponsors",
+      "subtitle": "Meet the industry professionals who are accompanying us",
+      "topButton": "Support this event"
+    },
+    "contact": {
+      "title": "Have any questions?¿Tienes alguna pregunta?",
+      "subtitle": "Contact us via email or you can reach via social networks",
+      "topButton": "Send email"
+    }
   }
 }
