Removing wrong text in translations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -32,7 +32,7 @@
       "topButton": "Support this event"
     },
     "contact": {
-      "title": "Have any questions?¿Tienes alguna pregunta?",
+      "title": "Have any questions?",
       "subtitle": "Contact us via email or you can reach via social networks",
       "topButton": "Send email"
     }
