--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,10 +22,10 @@
       "subtitle": "Each workshop has an additional cost apart from the conference",
       "bottomButton": "See all workshops"
     },
-    "aboutevent":{
-        "title": "About the event",
-        "subtitle": "The most important JAVA event in Mexico",
-        "description": "It is the conference for software development around the Java world in Spanish. In past years, JavaUP and JEspañol efforts have resulted in important and content-rich conferences from major exhibitors. 2017 at UNAM with JavaCloudDay, in 2018 at UPIICSA with JavaDay JavaUP. "
+    "aboutevent": {
+      "title": "About the event",
+      "subtitle": "The most important JAVA event in Mexico",
+      "description": "It is the conference for software development around the Java world in Spanish. In past years, JavaUP and JEspañol efforts have resulted in important and content-rich conferences from major exhibitors. 2017 at UNAM with JavaCloudDay, in 2018 at UPIICSA with JavaDay JavaUP. "
     },
     "tickets": {
       "title": "Tickets",
@@ -41,8 +41,9 @@
       "subtitle": "Contact us via email or you can reach via social networks",
       "topButton": "Send email"
     },
-    "banner":{
+    "banner": {
       "subtitle": "The most important JAVA event in Mexico"
-  }
-  }
+    }
+  },
+  "months": []
 }
