--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -44,6 +44,22 @@
       "subtitle": "El evento de JAVA más importante de México"
     }
   },
+  "footer-text": {
+    "title": "Suscribete a nuestro boletín!",
+    "subtitle": "No spam, solo las últimas noticias sobre precios y actividades",
+    "designed": "Diseñado por:",
+    "developed": "Desarrollado por:",
+    "social": "Redes sociales"
+  },
+  "footer": {
+    "organizers": "Organizadores",
+    "contact": "Contacto",
+    "faq": "FA&Q",
+    "code": "Código de coducta",
+    "terms": "Términos y condiciones",
+    "privacy": "Privacy and Legacy",
+    "about": "Acerca de nosotros"
+  },
   "community" : {
     "title": "Organizadores",
     "subtitle": "Creamos eventos maravillosos",
