Adding the ViewHeader component
This represents the big text in blue background stating which section are you

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -67,7 +67,8 @@
     "buttonText": "I Want to know more"
     },
   "sponsor" : {
-    "titleSection": "Meet our professionals",
+    "titleSection": "Sponsors",
+    "subtitleSection": "Meet our professionals",
     "buttonText": "Website"
   }
 }
