--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -37,7 +37,7 @@
     },
     "contact": {
       "title": "¿Tienes alguna pregunta?",
-      "subtitle": "Escribenos o puedes contactarnos por nuestras redes sociales.",
+      "subtitle": "Escríbenos o puedes contactarnos por nuestras redes sociales.",
       "topButton": "Enviar e-mail"
     },
     "banner": {
