Changing text in the footer
- Fixes #123

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -45,8 +45,8 @@
     }
   },
   "footer-text": {
-    "title": "Suscribete a nuestro boletín!",
-    "subtitle": "No spam, solo las últimas noticias sobre precios y actividades",
+    "title": "Un evento organizado por programadores para programadores.",
+    "subtitle": "¡Te esperamos!",
     "designed": "Diseñado por:",
     "developed": "Desarrollado por:",
     "social": "Redes sociales"
