--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -24,7 +24,7 @@
     "aboutevent": {
       "title": "Sobre el evento",
       "subtitle": "El evento de JAVA más importante de México",
-      "description": "Es la conferencia de desarrollo de software más grande alrededor del mundo de Java en Español. En años pasados esfuerzos de JavaUP y de JEspañol han conseguido conferencias importantes y llenas de grandes contenidos a través de grandes expositores. 2017 en UNAM con la JavaCloudDay, en 2018 en UPIICSA con JavaDay JavaUP. "
+      "description": "JConf México es un evento anual organizado por las comunidades en Guadalajara relacionadas a Java y sus variantes de lenguajes JVM. Reunimos el talento de personas en México y alrededor del mundo interesadas en compartir su conocimiento si un fin de lucro. Es un evento organizado por programadores para programadores."
     },
     "tickets": {
       "title": "Tickets",
