--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -24,7 +24,7 @@
     "aboutevent": {
       "title": "About the event",
       "subtitle": "The most important JAVA event in Mexico",
-      "description": "It is the conference for software development around the Java world in Spanish. In past years, JavaUP and JEspañol efforts have resulted in important and content-rich conferences from major exhibitors. 2017 at UNAM with JavaCloudDay, in 2018 at UPIICSA with JavaDay JavaUP. "
+      "description": "JConf Mexico is an annual event organized by the communities in Guadalajara related to Java and its JVM language variants. We bring together the talent of people in Mexico and around the world interested in sharing their knowledge for non-profit. It is an event organized by programmers for programmers."
     },
     "tickets": {
       "title": "Tickets",
