:speech_balloon: Update subtitle and delete buttonInfo

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -32,7 +32,7 @@
     },
     "sponsors": {
       "title": "Sponsors",
-      "subtitle": "Conoce a los profesionales de la industria que nos acompañan",
+      "subtitle": "Da click y conoce más de nuestros patrocinadores, que sin su ayuda este evento no sería el mismo",
       "topButton": "Patrocina este evento"
     },
     "contact": {
