--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -32,7 +32,7 @@
     },
     "sponsors": {
       "title": "Sponsors",
-      "subtitle": "Meet the industry professionals who are accompanying us",
+      "subtitle": "Click and learn more about our sponsors, without their help this event would not be the same",
       "topButton": "Support this event"
     },
     "contact": {
