Changed type  number y/o string, change text for subtitle

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -28,7 +28,7 @@
     },
     "tickets": {
       "title": "Tickets",
-      "subtitle": "Get yours while they are still available"
+      "subtitle": "Get your ticket"
     },
     "sponsors": {
       "title": "Sponsors",
