--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -28,7 +28,7 @@
     },
     "tickets": {
       "title": "Tickets",
-      "subtitle": "Consigue tu entrada mientras estan disponibles"
+      "subtitle": "Obtén tu entrada"
     },
     "sponsors": {
       "title": "Sponsors",
