Functionality for the footer links
This Fixes #135

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -57,7 +57,7 @@
     "faq": "FA&Q",
     "code": "Código de coducta",
     "terms": "Términos y condiciones",
-    "privacy": "Privacy and Legacy",
+    "privacy": "Aviso de privacidad",
     "about": "Acerca de nosotros"
   },
   "community" : {
