--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -11,15 +11,15 @@
   },
   "home": {
     "speakers": {
-      "title": "Speakers",
+      "title": "Presentadores",
       "subtitle": "Conoce a los profesionales de la industria que nos acompañan",
-      "topButton": "Participa como speaker aquí",
-      "bottomButton": "Ver todos los speakers"
+      "topButton": "Participa como presentadores aquí",
+      "bottomButton": "Ver todos los presentadores"
     },
     "workshops": {
-      "title": "Workshops",
+      "title": "Talleres",
       "subtitle": "Cada taller tendrá un costo adicional a su entrada a las conferencias",
-      "bottomButton": "Ver todos los workshops"
+      "bottomButton": "Ver todos los talleres"
     },
     "aboutevent": {
       "title": "Sobre el evento",
@@ -31,7 +31,7 @@
       "subtitle": "Obtén tu entrada"
     },
     "sponsors": {
-      "title": "Sponsors",
+      "title": "Patrocinadores",
       "subtitle": "Da click y conoce más de nuestros patrocinadores, que sin su ayuda este evento no sería el mismo",
       "topButton": "Patrocina este evento"
     },
@@ -63,7 +63,7 @@
   "community" : {
     "title": "Organizadores",
     "subtitle": "Creamos eventos maravillosos",
-    "titleSection": "JConf es un evento organizado por las comunidades J4Guanatos y Java User Group gdl.",
+    "titleSection": "JConf es un evento organizado por las comunidades que hablan de la JVM en Guadalajara",
     "buttonText": "Quiero saber más"
   },
   "sponsor" : {
