Functionality links to LinkedIn and styles

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -70,5 +70,8 @@
     "titleSection": "Sponsors",
     "subtitleSection": "Meet our professionals",
     "buttonText": "Website"
+  },
+  "developer" : {
+    "title": "Developers"
   }
 }
