Add view developer test, update router test with developers path, update footer test for link rockzy

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -72,7 +72,7 @@
     "buttonText": "Website"
   },
   "developer" : {
-    "title": "Developers
+    "title": "Developers"
   },
   "social": {
     "textInfo": "More information"
